# revoxx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  release.yml  tests.yml
revoxx/: __init__.py  app.py  constants.py
revoxx/audio/: audio_buffer.py  audio_queue_processor.py  buffer_manager.py  edit_commands.py  editor.py  level_calculator.py  mel_constants.py  mel_factory.py  player.py  queue_manager.py  recorder.py  shared_state.py  undo_stack.py  worker_state.py
revoxx/audio/processors/: mel_spectrogram.py
revoxx/controllers/: __init__.py  asr_auto_controller.py  audio_controller.py  device_controller.py  dialog_controller.py  display_controller.py  edit_controller.py  file_operations_controller.py  flag_controller.py  navigation_controller.py  process_manager.py  session_controller.py
revoxx/dataset/: asr_verifier.py  exporter.py
revoxx/doc/: USER_GUIDE.md
revoxx/resources/: keyboard_shortcuts.txt
revoxx/resources/templates/: dataset_readme.txt  index_format_with_intensity.txt  index_format_without_intensity.txt
revoxx/session/: __init__.py  manager.py  models.py
revoxx/ui/: emotion_indicator.py  font_manager.py  frequency_axis.py  info_overlay.py  main_window.py  themes.py  window_base.py  window_factory.py  window_manager.py
revoxx/ui/dialogs/: asr_dialog.py  dataset_dialog.py  dialog_utils.py  find_dialog.py  import_text_dialog.py  new_session_dialog.py  open_session_dialog.py  progress_dialog.py  session_settings_dialog.py  user_guide_dialog.py  utterance_list_base.py  utterance_order_dialog.py
revoxx/ui/level_meter/: led_level_meter.py
revoxx/ui/menus/: application_menu.py  audio_devices.py
revoxx/ui/spectrogram/: display_base.py  mel_processor_manager.py  playback_handler.py  recording_display.py  selection_interaction.py  selection_state.py  view_context.py  widget.py
revoxx/ui/spectrogram/controllers/: __init__.py  clipping_visualizer.py  playback_controller.py  selection_visualizer.py
revoxx/utils/: __init__.py  active_recordings.py  adaptive_frame_rate.py  device_manager.py  file_manager.py  process_cleanup.py  settings_manager.py  state.py  tk_compat.py
scripts_module/: omnivad_processor.py  vadiate.py
tests/: conftest.py  test_audio_controller.py  test_audio_queue_manager.py  test_config.py  test_dataset_exporter.py  test_device_controller.py  test_device_manager.py  test_dialog_controller.py  test_display_controller.py  test_file_manager.py  test_file_operations_controller.py  test_ipc_communication.py  test_navigation_controller.py  test_new_session_dialog.py  test_process_manager.py  test_session_controller.py  test_session_manager.py  test_session_models.py  test_tk_compat.py
