[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revoxx"
version = "1.0.0"
description = "Professional speech recording application for creating high-quality speech datasets"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Grammatek ehf", email = "info@grammatek.com"}
]
maintainers = [
    {name = "Grammatek ehf", email = "info@grammatek.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["speech", "recording", "tts", "dataset", "audio", "voice", "emotional-speech"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.5.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "silero-vad>=5.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/icelandic-lt/revoxx"
Documentation = "https://github.com/icelandic-lt/revoxx#readme"
Repository = "https://github.com/icelandic-lt/revoxx"
Issues = "https://github.com/icelandic-lt/revoxx/issues"

[project.scripts]
revoxx = "revoxx:main"
revoxx-export = "scripts_module.export:main"
revoxx-vadiate = "scripts_module.vadiate:main"

[tool.setuptools]
packages = ["revoxx", "revoxx.audio", "revoxx.audio.processors", "revoxx.dataset",
           "revoxx.session", "revoxx.ui", "revoxx.ui.dialogs", "revoxx.ui.level_meter",
           "revoxx.ui.menus", "revoxx.ui.spectrogram", "revoxx.ui.spectrogram.controllers",
           "revoxx.utils", "scripts_module"]

[tool.setuptools.package-data]
revoxx = [
    "resources/*.png",
    "resources/templates/*.txt",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alignment/docker_data
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88