[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revoxx"
version = "1.0.0.dev10"
description = "Speech recording application for creating high-quality speech datasets"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Grammatek ehf", email = "info@grammatek.com"}
]
maintainers = [
    {name = "Grammatek ehf", email = "info@grammatek.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["speech", "recording", "tts", "dataset", "audio", "voice", "emotional-speech"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0,<1.24.0; python_version<'3.10'",  # Older numpy for Python 3.9
    "numpy>=1.23.0,<1.26.0; python_version=='3.10.*'",  # Avoid 1.26.x CPU bug on Python 3.10
    "numpy>=1.24.0; python_version>='3.11'",  # NumPy 2.x works fine with Python 3.11+
    "matplotlib>=3.5.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
vad = [
    "torch>=2.0.0",
    "silero-vad>=5.0",
]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/icelandic-lt/revoxx"
Documentation = "https://github.com/icelandic-lt/revoxx#readme"
Repository = "https://github.com/icelandic-lt/revoxx"
Issues = "https://github.com/icelandic-lt/revoxx/issues"

[project.scripts]
revoxx = "revoxx:main"
revoxx-export = "scripts_module.export:main"
revoxx-vadiate = "scripts_module.vadiate:main"

[tool.setuptools]
packages = ["revoxx", "revoxx.audio", "revoxx.audio.processors", "revoxx.controllers",
           "revoxx.dataset", "revoxx.resources", "revoxx.resources.templates",
           "revoxx.session", "revoxx.ui", "revoxx.ui.dialogs", "revoxx.ui.level_meter",
           "revoxx.ui.menus", "revoxx.ui.spectrogram", "revoxx.ui.spectrogram.controllers",
           "revoxx.utils", "scripts_module"]

[tool.setuptools.package-data]
revoxx = [
    "resources/*.png",
    "resources/templates/*.txt",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alignment/docker_data
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88